samples/_failures_safe/1761722468_25f492_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d67ff420.c: In function ‘main’:
./samples/SAFE/__tmp_d67ff420.c:172:9: error: expected declaration or statement at end of input
  172 |         }
      |         ^
./samples/SAFE/__tmp_d67ff420.c:172:9: error: expected declaration or statement at end of input
